[package]
name = "regexplanet-rust"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["form"] }
base64 = "0.22.1"
chrono = "0.4.38"
html-escape = "0.2.13"
regex = "1.10.6"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "limit"] }
